# staking-contract-rs

./: .gitignore  Cargo.toml  README.md  build.sh
src/: account.rs  core_impl.rs  enumeration.rs  internal.rs  lib.rs  util.rs
tests/simulation-tests/: main.rs
token-test/: vbi-ft.wasm
